# Cover-Letter-LLM

./: package-lock.json
backend/: .gitignore  pyproject.toml  requirements.txt
backend-api/: .gitignore  requirements.txt
backend-api/app/: dependencies.py  main.py
backend-api/app/models/: schemas.py
backend-api/app/routes/: auth.py  letters.py  resumes.py  user.py
backend-api/app/services/: ai.py  db.py  jwt.py
backend-api/app/utils/: security.py
backend/app/: dependencies.py  main.py
backend/app/core/: logging.py
backend/app/models/: schemas.py
backend/app/models/schemas/: auth.py  cover_letters.py  jobs.py  profiles.py  response.py
backend/app/routes/: auth.py  letters.py  resumes.py
backend/app/services/: db.py  gemini.py  llm.py
backend/app/utils/: response.py  text.py
chrome-extension/: api.js  background.js  content.js  manifest.json  popup.html  popup.js
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx
dashboard/src/hooks/: useLetters.tsx
dashboard/src/pages/: GenerateLetter.tsx  Home.tsx  Letters.tsx  Register.tsx  login.tsx
dashboard/src/routes/: AppRoutes.tsx
dashboard/src/services/: API.ts
frontend/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend-dashboard/: index.html
frontend-dashboard/pages/: generate_letter.html  letter.html
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthForm.tsx  AuthPromptModal.tsx  AuthWatcher.tsx  DeleteButton.tsx  DeleteConfirmationDialog.tsx  (+5 more)
(+37 files in other folders)
